Refactoring and fixes for CF lifecycle events handling